replace StringBuffers with StringBuilders and replace LinkedLists